--- a/gb/19/12/10/n11712660.md
+++ b/gb/19/12/10/n11712660.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/edsp2886/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/edsp2886/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/edsp2886/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/edsp2886/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/edsp2886/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/edsp2886/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/edsp2886/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>地铁车厢供应商  向MTA拖延交货三年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/5e0ab1aee0730b9d3e5c35bbd33948d2-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2019年12月10日讯】（大纪元记者黄小堂美国纽约报导）纽约市主计长<ahref="https://github.com/edsp2886/djy/blob/master/gb/tag/%E6%96%AF%E9%9D%99%E6%A0%BC.md#1">斯静格</a>（Scott Stringer）9日召开记者会，发布稽核报告。他表示，2012年大都会运输署（MTA）与庞巴迪运输公司（Bombardier Transit Corporation）签订总价6亿美元合约，在2017年1月之前交付全部300辆车厢。但该公司的交货时间延迟近三年，且并未按约交付应有数量，造成MTA增加3,500万美元的成本，用以维护目前老旧的车厢。</p>
-<p><ahref="https://github.com/edsp2886/djy/blob/master/gb/tag/%E6%96%AF%E9%9D%99%E6%A0%BC.md#1">斯静格</a>表示，MTA无法充分监督庞巴迪运输公司的绩效表现，也未能完成合约中每年该完成的绩效评估，让供应商负起应有的责任，“该公司承诺为纽约市民和MTA提供最新型和先进的地铁车厢，以帮助落后过时的纽约市大众交通系统达到现代化。相反地，交货比预定晚了近三年，市民必须面对更频繁的地铁误点和故障。”</p>
+<p>【大纪元2019年12月10日讯】（大纪元记者黄小堂美国纽约报导）纽约市主计长<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%96%AF%E9%9D%99%E6%A0%BC.md#1">斯静格</a>（Scott Stringer）9日召开记者会，发布稽核报告。他表示，2012年大都会运输署（MTA）与庞巴迪运输公司（Bombardier Transit Corporation）签订总价6亿美元合约，在2017年1月之前交付全部300辆车厢。但该公司的交货时间延迟近三年，且并未按约交付应有数量，造成MTA增加3,500万美元的成本，用以维护目前老旧的车厢。</p>
+<p><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%96%AF%E9%9D%99%E6%A0%BC.md#1">斯静格</a>表示，MTA无法充分监督庞巴迪运输公司的绩效表现，也未能完成合约中每年该完成的绩效评估，让供应商负起应有的责任，“该公司承诺为纽约市民和MTA提供最新型和先进的地铁车厢，以帮助落后过时的纽约市大众交通系统达到现代化。相反地，交货比预定晚了近三年，市民必须面对更频繁的地铁误点和故障。”</p>
 <p>主计长办公室发现，庞巴迪运输公司始终未能及时达到合约订立的时程表、遵守技术要求，并及时更正地铁车厢关键零组件中的严重缺陷。</p>
 <p>稽核报告还表示，MTA对该合约管理不当，包括时程延误、不良施工和设计等，导致必须耗费3,500万的公帑，维护老旧、超过使用年限的车厢。2012年MTA与庞巴迪公司签订了6亿美元的合约。该合约要求该公司在2015年1月之前先交付10辆原型车厢、在2017年1月之前交付全部300辆车厢。但到了2017年1月，该公司仅交付了18辆。</p>
 <p>尽管日前庞巴迪与MTA协商修改交货期限至2019年1月，代价是减少127万美元的合约金额，并无偿提供另外18辆车厢。然而，该公司再次延误，仅交出162辆车厢。截至2019年12月，318辆车厢仍未全部交付，仅有298辆（其中278辆正在营运中），比合约要求晚了35个月。</p>
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/3/30/n11150854.md#1">纽约MTA桥梁 隧道过路费3/31起加价</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/4/6/n11167206.md#1">纽约州网购销售税6月上路 税款补助MTA</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/4/26/n11214607.md#1">纽约给新州居民减免“拥堵费”？MTA：并无此事</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/6/21/n11337203.md#1">机场轻轨疑延期 纽约市主计长吁MTA增加服务</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/9/17/n11526663.md#1">纽约MTA五年资本计划515亿元 史上最高</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/10/18/n11596418.md#1">纽约MTA监控器10天抓到1500非法停车</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/19/10/25/n11611079.md#1">地铁铁轨螺栓砸破车天窗 纽约男子抱怨MTA失修</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/27/n12063618.md#1">纽约州“暂停令”5月15日结束  分两阶段复工</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/27/n12063599.md#1">纽约州长：疫情下降到3月31日时的水平</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/27/n12063625.md#1">纽约市府成立工作组  以恢复纽约市经济</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/3/30/n11150854.md#1">纽约MTA桥梁 隧道过路费3/31起加价</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/4/6/n11167206.md#1">纽约州网购销售税6月上路 税款补助MTA</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/4/26/n11214607.md#1">纽约给新州居民减免“拥堵费”？MTA：并无此事</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/6/21/n11337203.md#1">机场轻轨疑延期 纽约市主计长吁MTA增加服务</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/9/17/n11526663.md#1">纽约MTA五年资本计划515亿元 史上最高</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/10/18/n11596418.md#1">纽约MTA监控器10天抓到1500非法停车</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/10/25/n11611079.md#1">地铁铁轨螺栓砸破车天窗 纽约男子抱怨MTA失修</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740441.md#1">纽约国会第10选区吸引民主党至少6人竞争</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740438.md#1">纽约新选区地图草案 给皇后区选举带来啥变化？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740417.md#1">纽约州长霍楚宣布 严打枪支犯罪和恐怖主义</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148175.md#1" target="_blank">共产暴政录：印尼排华暴乱事件</a></li><li><a href="https://github.com/edsp2886/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/25/n12061172.md#1">朝鲜官媒闹乌龙 俄使馆给金正恩“送花圈”</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/25/n12061249.md#1">川普和普京发表罕见联合声明</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/25/n12059599.md#1">【内幕】让孙力军“搞出大动静”的丑闻</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/26/n12061998.md#1">染疫女陆客陷忧郁 出院时泪谢台湾医护暖心照顾</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/26/n12061608.md#1">金正恩去向成谜 专列停在元山度假大院</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/24/n12057321.md#1">罗志祥凌晨发文向周扬青道歉 为花心行为认错</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/24/n12059276.md#1">入戏太深忧心患绝症 郭富城忆亡母两度哽咽</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/24/n12059453.md#1">孙俪让丈夫教儿子数学 邓超自己做完还求表扬</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/26/n12061698.md#1">接受家乡名主播专访 吴凤曝台湾防疫成功关键</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/25/n12059970.md#1">《惊天营救》影评：尽显动作片本色的出色作品！</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/24/n12057457.md#1">男子因故“死亡” 看到自己一生像影片播放</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/1/n11993781.md#1">【命理】五年间大发大破 绞尽脑汁防劫不如天算</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/16/2/4/n4633423.md#1">一门才女进宫封学士  《女论语》十篇传后世</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/17/n12038960.md#1">针灸神技超现科学  赘疣立坠 隔衣下针</a></li>
-<li><a href="https://github.com/edsp2886/djy/blob/master/gb/20/4/22/n12052766.md#1">姻缘天定 非人力所能阻隔</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12944071.md#1">【未解之谜】流落人间的金箍棒 印度德里铁柱</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/19/n12891294.md#1">道门出败类 张三丰出手示警</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12963139.md#1">【唐浩视界】中东火箭幕后黑手 台抗疫中共搅局</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961300.md#1">【探索时分】太平洋定海神针 美救台的第七舰队</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12963444.md#1">【财商天下】真金还是泡沫？比特币的疯狂</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12959579.md#1">唐凤推简讯实联制5秒搞定 免费且免填个资</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961144.md#1">印度疫情惨 恒河飘大量浮尸 警方跨河拉网</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960904.md#1">深圳大楼乱晃惊动美领馆 向美国人发警告</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961232.md#1">医生父亲台湾前线抗疫 炎亚纶心疼喊话</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962574.md#1">周子瑜拥有罕见手相 命理老师：她有天使气场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960010.md#1">《月薪娇妻》新垣结衣与星野源成为真夫妻</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/18/n12958844.md#1">香港歌手黎瑞恩胰脏长肿瘤 不做手术奇迹康复</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961659.md#1">“很难在大陆拍戏”香港导演彭浩翔移居加拿大</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12959656.md#1">台湾确诊激增 日本作家却看好2防疫关键</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960642.md#1">清冠一号治新冠好得快、无副作用？这类人不能吃</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/18/n12957616.md#1">新冠确诊者传染力多强？这数字告诉你 越低越危险</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/edsp2886/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/edsp2886/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/10/n11712660.htm">地铁车厢供应商  向MTA拖延交货三年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/10/n11712660.htm">地铁车厢供应商  向MTA拖延交货三年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/edsp2886/djy/blob/master/gb/19/12/10/n11712660.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/edsp2886/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/edsp2886/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/edsp2886/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/edsp2886/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/edsp2886/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/12/10/n11712660.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
